Issue #AR-149 by tuj: Fixed recursive bug with ldap user. Added logged in as text in nav menu. Reenabled fos_userbundle login

--- a/web/app/shared/menu/menu.html
+++ b/web/app/shared/menu/menu.html
@@ -18,6 +18,7 @@
       <a href="" class="nav--item" data-ng-click="forcePush()">Force push content</a>
     </div>
     <div class="nav--item-wrapper">
+      <div class="nav--text-item header--nav-menu-logged-in-user">Logget ind som {{ currentUser ? (currentUser.fullname ? currentUser.fullname : currentUser.username) : "..." }}</div>
       <a href="/logout" class="nav--item">Log ud</a>
     </div>
   </nav>
