Added separate input fields for each line

--- a/src/kkbding2-bundle/Resources/public/apps/dingEditors/header-editor-simple.html
+++ b/src/kkbding2-bundle/Resources/public/apps/dingEditors/header-editor-simple.html
@@ -12,7 +12,20 @@
       <input
         class="small-bottom-margin"
         type="text"
-        ng-model="slide.options.paragraph"
+        ng-model="slide.options.paragraph1"
+        placeholder="Linje 1"
+      />
+      <input
+        class="small-bottom-margin"
+        type="text"
+        ng-model="slide.options.paragraph2"
+        placeholder="Linje 2"
+      />
+      <input
+        class="small-bottom-margin"
+        type="text"
+        ng-model="slide.options.paragraph3"
+        placeholder="Linje 3"
       />
     </form>
   </div>
