--- a/src/kkbding2-bundle/Resources/public/apps/dingEditors/image-focus.html
+++ b/src/kkbding2-bundle/Resources/public/apps/dingEditors/image-focus.html
@@ -1,29 +1,25 @@
-<div
-  class="edit-menu"
-  role="banner"
->
+<div class="edit-menu {{slide.options.type}}" role="banner">
   <div class="edit-menu--inner is-visible third-width">
-    <div
-      class="edit-menu--toggle-icon"
-      data-ng-click="close()"
-    >X</div>
+    <div class="edit-menu--toggle-icon" data-ng-click="close()">X</div>
     <form class="edit-menu--form font-150">
       <div class="edit-menu--background-page-inner">
         <h2 class="edit-menu--background-header">Vælg fokus</h2>
         <div class="edit-menu--background-content flex focus-tools-container">
-          <div class='flex grow small-right-margin vertical align-start'>
+          <div class="flex grow small-right-margin vertical align-start">
             <label class="edit-menu--label font-150">Zoom</label>
             <input
-              class='block'
+              class="block"
               type="range"
               min="{{zoomMin}}"
               max="{{zoomMax}}"
               step="10"
               ng-model="slide.options.imageZoom"
             />
-            <label class="edit-menu--label font-150">Horisontal justering</label>
+            <label class="edit-menu--label font-150"
+              >Horisontal justering</label
+            >
             <input
-              class='block'
+              class="block"
               type="range"
               min="-1000"
               max="1000"
@@ -32,7 +28,7 @@
             />
             <label class="edit-menu--label font-150">Vertikal justering</label>
             <input
-              class='block'
+              class="block"
               type="range"
               min="-1000"
               max="1000"
@@ -42,9 +38,11 @@
             <button
               class="edit-menu--background-button reset-margin small-top-margin"
               data-ng-click="close()"
-            >Gem og luk</button>
+            >
+              Gem og luk
+            </button>
           </div>
-          <div class='small-bottom-margin'>
+          <div class="small-bottom-margin">
             <div
               class="image-picker-placeholder"
               data-ng-style="{
