Added place location and fixed minor bugs

--- a/src/kkbding2-bundle/Resources/public/apps/dingEditors/header-editor-simple.html
+++ b/src/kkbding2-bundle/Resources/public/apps/dingEditors/header-editor-simple.html
@@ -6,7 +6,20 @@
       <input
         class="small-bottom-margin"
         type="text"
-        ng-model="slide.options.header"
+        ng-model="slide.options.header1"
+        placeholder="Header 1"
+      />
+      <input
+        class="small-bottom-margin"
+        type="text"
+        ng-model="slide.options.header2"
+        placeholder="Header 2"
+      />
+      <input
+        class="small-bottom-margin"
+        type="text"
+        ng-model="slide.options.header3"
+        placeholder="Header 3"
       />
       <label class="edit-menu--label">Infotekst / brødtekst</label>
       <input
